--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  @font-face {
+    font-family: system-ui;
+    font-display: swap;
+  }
+}
+
 :root {
   --color-primary: #1E88E5;
   --color-secondary: #43A047;
