--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,6 +20,8 @@
 @font-face {
   font-family: 'Roboto';
   src: url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+  font-display: swap;
+  font-weight: 400 700;
 }
 
 body {
