Assistant checkpoint: Fix font loading and dialog accessibility issues
Assistant generated file changes:
- client/src/index.css: Fix font loading
- client/src/pages/create-event.tsx: Add missing dialog descriptions

---

User prompt:

Can we resolve the errors in the console within the Dashboard?

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,35 @@
 
 @layer base {
   @font-face {
+    font-family: 'Roboto';
+    src: local('Roboto'),
+         url('https://fonts.gstatic.com/s/roboto/v30/KFOmCnqEu92Fr1Mu4mxK.woff2') format('woff2');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+  }
+  
+  @font-face {
+    font-family: 'Roboto';
+    src: local('Roboto Medium'),
+         url('https://fonts.gstatic.com/s/roboto/v30/KFOlCnqEu92Fr1MmEU9fBBc4.woff2') format('woff2');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+  }
+  
+  @font-face {
+    font-family: 'Roboto';
+    src: local('Roboto Bold'),
+         url('https://fonts.gstatic.com/s/roboto/v30/KFOlCnqEu92Fr1MmWUlfBBc4.woff2') format('woff2');
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+  }
+}
+
+@layer base {
+  @font-face {
     font-family: system-ui;
     font-display: swap;
   }
